# terraform-aws-http-canary

./: .gitignore  .pre-commit-config.yaml  README.md  README.me  healthcheck.go  healthcheck.tf  main.tf  variables.tf  versions.tf
examples/complete/: main.tf  outputs.tf  variables.tf
http-healthcheck/: README.md  main.tf  variables.tf
http_check/: pyproject.toml
http_check/http_check/: http_check.py  main.py
http_check/tests/: test_http_check.py  test_main.py
src/: pyproject.toml
src/canary/: main.py
src/http_check/: main.py
src/tests/: conftest.py  test_main.py
src/tests/unit/: test_main.py
