[tool.poetry]
name = "http_check"
version = "0.1.0"
description = ""
authors = ["Carl Cliver <ccliver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
