[tool.poetry]
name = "http_check"
version = "0.1.0"
description = ""
authors = ["Carl Cliver <ccliver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
boto3 = "^1.26.6"
moto = "^4.0.9"
cryptography = "39.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
