[tool.poetry]
name = "canary"
version = "0.1.0"
description = ""
authors = ["Carl Cliver <ccliver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.6"
requests = "^2.28.1"
cryptography = "44.0.1"
aws-lambda-powertools = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
moto = "^5"

[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
responses = "^0.25.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests/unit"
]
